ajout methode getListFirstName